# sysplot

./: .buildinfo  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  api.html  genindex.html  icon.py  index.html  installing.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  sg_execution_times.html
.github/workflows/: ci.yaml  docs.yaml  publish.yaml
_autosummary/: sysplot.apply_config.html  sysplot.get_figsize.html  sysplot.get_style.html  sysplot.highlight_axes.html  sysplot.plot_bode.html  sysplot.plot_nyquist.html  sysplot.plot_poles_zeros.html  sysplot.plot_stem.html  sysplot.save_current_figure.html  sysplot.set_major_tick_labels.html  sysplot.set_minor_log_ticks.html  sysplot.set_symmetric_axis_limits.html
_downloads/28bf5b885c707f7863eaed624722ca82/: plot_example.ipynb
_downloads/2a8f5d128617c0c84fee51d4c17a331d/: plot_axes_guideline.py
_modules/: index.html
_modules/sysplot/: axes.html  config.html  figures.html  plotting.html  styles.html  ticks.html
_sources/: api.rst.txt  index.rst.txt  installing.rst.txt
_sources/_autosummary/: sysplot.apply_config.rst.txt  sysplot.get_figsize.rst.txt  sysplot.highlight_axes.rst.txt  sysplot.plot_bode.rst.txt  sysplot.plot_poles_zeros.rst.txt  sysplot.set_major_tick_labels.rst.txt  sysplot.set_symmetric_axis_limits.rst.txt
_sources/auto_examples/: index.rst.txt  plot_axes_guideline.rst.txt
_static/: documentation_options.js
auto_examples/: index.html  plot_axes_guideline.html  plot_example.html  sg_execution_times.html
docs/: api.rst  concepts.rst  conf.py  index.rst  installing.rst  make.bat  sg_execution_times.rst
docs/_autosummary/: sysplot.get_style.rst  sysplot.plot_nyquist.rst  sysplot.plot_stem.rst  sysplot.save_current_figure.rst  sysplot.set_minor_log_ticks.rst
docs/_templates/_autosummary/: function.rst
docs/auto_examples/: index.rst  minimum_example.codeobj.json  minimum_example.ipynb  minimum_example.py  minimum_example.rst  plot_axes_guideline.codeobj.json  plot_axes_guideline.ipynb  plot_axes_guideline.py.md5  plot_example.codeobj.json  plot_example.ipynb  plot_example.py  plot_example.py.md5  plot_example.rst  plot_major_ticks.codeobj.json  plot_major_ticks.ipynb  plot_major_ticks.py  plot_major_ticks.py.md5  plot_major_ticks.rst  quick_start.codeobj.json  quick_start.ipynb  quick_start.py  quick_start.rst  sg_execution_times.rst
docs/examples/: GALLERY_HEADER.rst  add_origin.py  add_tick_line.py  apply_config.py  emphasize_coord_lines.py  get_figsize.py  get_style.py  heaviside.py  matplot_cycler.py  matplotlib_cycler.py  minimum_example.py  modelling.py  plot_angle.py  plot_axes_guideline.py  plot_bode.py  plot_example.py  plot_filter_tolerance.py  plot_major_ticks.py  plot_minor_log_ticks.py  plot_nyquist.py  plot_poles_zeros.py  plot_stem.py  plot_unit_circle.py  quick_start.py  repeat_axis_ticks.py  save_current_figure.py  set_major_ticks.py  set_minor_log_ticks.py  set_xmargin.py  zorder.py
examples/: GALLERY_HEADER.html
src/sysplot/: __init__.py  angles.py  axes.py  config.py  figures.py  plotting.py  signals.py  styles.py  ticks.py
tests/: smoke_test.py  test.ipynb  test.py  test_sysplot.py
