[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sysplot"
version = "1.0.0"
description = "Centralized plotting utilities for reproducible, publication-quality figures in system theory and control engineering"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jax", email = "jax.raffnix@posteo.com" }]
keywords = ["plotting", "control-theory", "bode", "nyquist", "poles-zeros"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "matplotlib>=3.5.0",
    "seaborn",
    "numpy>=1.23.0",
    "cycler>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "control>=0.10.0",
]
docs = [
    "sphinx>=9.0.0",
    "sphinx-autodoc-typehints>=3.6.0",
    "pydata-sphinx-theme>=0.15.0",
    "sphinx-gallery>=0.20.0",
    "sphinx-design",
]

[project.urls]
homepage = "https://github.com/JaxRaffnix/sysplot"
documentation = "https://jaxraffnix.github.io/sysplot"
repository = "https://github.com/JaxRaffnix/sysplot"
"bug-tracker" = "https://github.com/JaxRaffnix/sysplot/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sysplot*"]
