[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sysplot"
version = "1.0.0"
description = "Centralized plotting utilities for reproducible, publication-quality figures in system theory and control engineering"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jax", email = "jax.raffnix@posteo.com" }]
keywords = ["plotting", "control-theory", "bode", "nyquist", "poles-zeros"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "matplotlib>=3.5.0",
    "seaborn",
    "numpy>=1.23.0",
    "cycler>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "control>=0.10.0",
    "bumpver>=2025.1131",
    "build>=1.4.0",
    "twine>=6.2.0",
    "ruff>=0.15.6",
    "sysplot[dev]",
    "ty>=0.0.23",
]
docs = [
    "sphinx>=9.0.0",
    "sphinx-autodoc-typehints>=3.6.0",
    "pydata-sphinx-theme>=0.15.0",
    "sphinx-gallery>=0.20.0",
    "sphinx-design",
]

[project.urls]
homepage = "https://github.com/JaxRaffnix/sysplot"
documentation = "https://jaxraffnix.github.io/sysplot"
repository = "https://github.com/JaxRaffnix/sysplot"
"bug-tracker" = "https://github.com/JaxRaffnix/sysplot/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sysplot*"]

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/sysplot/__init__.py" = ["{version}"]

[tool.uv.sources]
sysplot = { workspace = true }


[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = [
    "UP",  # pyupgrade
    "D",   # pydocstyle
]
ignore = ["D100"]

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["D103"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.ty]
python-version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests/test.py"]
