[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
homepage = "https://jaxraffnix.github.io/sysplot"
documentation = "https://jaxraffnix.github.io/sysplot"
repository = "https://github.com/JaxRaffnix/sysplot"
"bug-tracker" = "https://github.com/JaxRaffnix/sysplot/issues"

[project]
name = "sysplot"
version = "1.1.0"
description = "Centralized plotting utilities for reproducible, publication-quality figures in system theory and control engineering"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [{ name = "Jax", email = "jax.raffnix@posteo.com" }]
keywords = ["plotting", "control-theory", "bode", "nyquist", "poles-zeros"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.23.0",
    "cycler>=0.11.0",
    "seaborn>=0.13.2",
]


[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "control>=0.10.0",
    "ruff>=0.15.6",
    "ty>=0.0.23",
    "ipykernel>=7.2.0",
]
docs = [
    "sphinx>=9.0.0",
    "sphinx-autodoc-typehints>=3.6.0",
    "pydata-sphinx-theme>=0.15.0",
    "sphinx-gallery>=0.20.0",
    "sphinx-design",
]


[tool.setuptools.packages.find]
where = ["src"]
include = ["sysplot*"]


[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = [
    "UP",  # pyupgrade
    "D",   # pydocstyle
]
ignore = ["D100"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D205","D415"]
"**/{tests,docs}/**" = ["D103","D104","D415","D205"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"


[tool.pytest.ini_options]
testpaths = ["tests"]
